1.2.9 tweak to payments, moved param from route to body.
