# src/models/CreditCardPayment.ts
@@ -2,6 +2,7 @@ import { CreditCardToken } from './CreditCardToken';
 
 export interface CreditCardPayment {
     OrderID?: string
+    PaymentID?: string
     CreditCardID?: string
     CreditCardDetails?: CreditCardToken
     Currency?: string
